# xyppy

./: .gitignore  LICENSE  README.md  blorb.py  build-single-file-version.py  build.py  debug.py  iff.py  ops.py  ops_common.py  ops_compat.py  ops_impl.py  ops_impl_compat.py  pyproject.toml  quetzal.py  term.py  txt.py  txt_os.py  vterm.py  xyppy.py  zmach.py
formats/: blorb.py  quetzal.py
screens/: README.md
xyppy/: __main__.py  blorb.py  debug.py  iff.py  ops.py  ops_decode.py  ops_impl.py  ops_impl_compat.py  quetzal.py  term.py  vterm.py  zenv.py  zmath.py
